--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,42 @@
+@font-face {
+  font-family: 'Poppins', sans-serif;
+  src: url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,600;1,500&display=swap');
+}
+@font-face {
+  font-family: 'Poppins', sans-serif; 
+  src: url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,500;0,600;1,500&display=swap');
+}
+@font-face {
+  font-family: 'Poppins', sans-serif; 
+  src: url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;0,600;1,500&display=swap');
+}
+
+/* Default css */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
+  scroll-padding-top: 75px;
+}
+
+body {
+  font-weight: 400;
+  overflow-x: hidden;
+  position: relative;
+  background-color: #121212;
+  color: #fff !important;
+  font-family: 'Poppin', sans-serif !important;
+}
+
+h1,h2,h3,h4,h5,h6 {
+  margin: 0;
+  padding: 0;
+  line-height: normal;
+}
 .App {
   text-align: center;
 }
